doc/source/cluster/kubernetes/configs/ray-sandbox-sdk.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ray-sandbox-sdk
---
apiVersion: v1
kind: Service
metadata:
  name: sandbox-grpc
  namespace: ray-sandbox-sdk
spec:
  type: ClusterIP
  selector:
    ray.io/cluster: sandbox-sdk
    ray.io/node-type: head
  ports:
  - name: grpc
    port: 50051
    targetPort: grpc
