doc/source/cluster/kubernetes/configs/static-ray-cluster.tls.yaml
# Ray head node service, allowing worker pods to discover the head node to perform the bidirectional communication.
# More contexts can be found at [the Ports configurations doc](https://docs.ray.io/en/latest/ray-core/configure.html#ports-configurations).
apiVersion: v1
kind: Service
metadata:
  name: service-ray-head
  labels:
    app: ray-head
spec:
  clusterIP: None
  ports:
  - name: client
    protocol: TCP
    port: 10001
    targetPort: 10001
  - name: dashboard
    protocol: TCP
    port: 8265
    targetPort: 8265
  - name: gcs-server
    protocol: TCP
    port: 6379
    targetPort: 6379
  selector:
    app: ray-head
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-ray-head
  labels:
    app: ray-head
spec:
  # Do not change this - Ray currently only supports one head node per cluster.
  replicas: 1
  selector:
    matchLabels:
      app: ray-head
  template:
    metadata:
      labels:
        app: ray-head
    spec:
      # If the head node goes down, the entire cluster (including all worker
      # nodes) goes down as well. If you want Kubernetes to bring up a new
      # head node in this case, set this to "Always," else set it to "Never."
      restartPolicy: Always
      terminationGracePeriodSeconds: 60

      # This volume allocates shared memory for Ray to use for its plasma
      # object store. If you do not provide this, Ray falls back to
      # /tmp which cause slowdowns if it's not a shared memory volume.
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      - name: ca-tls
        secret:
          secretName: ca-tls
      - name: ray-tls
        emptyDir: {}
      # The gencert_head.sh can be prebaked into the docker container so the configMap is optional
      - name: gen-tls-script
        configMap:
          name: tls
          defaultMode: 0777
          # An array of keys from the ConfigMap to create as files
          items:
          - key: gencert_head.sh
            path: gencert_head.sh
      containers:
        - name: ray-head
          image: rayproject/ray:2.3.0
          imagePullPolicy: IfNotPresent
          command: [ "/bin/sh", "-c", "--" ]
          args:
            - "ray start --head --port=6379 --num-cpus=$MY_CPU_REQUEST --dashboard-host=127.0.0.1 --object-manager-port=8076 --node-manager-port=8077 --dashboard-agent-grpc-port=8078 --dashboard-agent-listen-port=52365 --block"
          ports:
            - containerPort: 6379 # GCS server
            - containerPort: 10001 # Used by Ray Client
            - containerPort: 8265 # Used by Ray Dashboard
          # This volume allocates shared memory for Ray to use for its plasma
          # object store. If you do not provide this, Ray falls back to
          # /tmp which cause slowdowns if it's not a shared memory volume.
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
            - mountPath: /etc/ca/tls
              name: ca-tls
              readOnly: true
            - mountPath: /etc/ray/tls
              name: ray-tls
          resources:
            limits:
              cpu: "2"
              memory: "4G"
            requests:
              # For production use-cases, we recommend specifying integer CPU requests and limits.
              # We also recommend setting requests equal to limits for both CPU and memory.
              # For this example, we use a 500m CPU request to accommodate resource-constrained local
              # Kubernetes testing environments such as Kind and minikube.
              cpu: "2"
              # The rest state memory usage of the Ray head node is around 1Gb. We do not
              # recommend allocating less than 2Gb memory for the Ray head pod.
              # For production use-cases, we recommend allocating at least 8Gb memory for each Ray container.
              memory: "4G"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-ray-worker
  labels:
    app: ray-worker
spec:
  # Change this to scale the number of worker nodes started in the Ray cluster.
  replicas: 2
  selector:
    matchLabels:
      app: ray-worker
  template:
    metadata:
      labels:
        app: ray-worker
    spec:
      restartPolicy: Always
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      - name: ca-tls
        secret:
          secretName: ca-tls
      - name: ray-tls
        emptyDir: {}
      # The gencert_worker.sh can be prebaked into the docker container so the configMap is optional
      - name: gen-tls-script
        configMap:
          name: tls
          defaultMode: 0777
          # An array of keys from the ConfigMap to create as files
          items:
          - key: gencert_worker.sh
            path: gencert_worker.sh
      containers:
      - name: ray-worker
        image: rayproject/ray:2.3.0
        imagePullPolicy: IfNotPresent
        command: ["/bin/bash", "-c", "--"]
        args:
          - "ray start --num-cpus=$MY_CPU_REQUEST --address=service-ray-head.default.svc.cluster.local:6379 --object-manager-port=8076 --node-manager-port=8077 --dashboard-agent-grpc-port=8078 --dashboard-agent-listen-port=52365 --block"
        ports:
          - containerPort: 6379 # GCS server
        # This volume allocates shared memory for Ray to use for its plasma
        # object store. If you do not provide this, Ray falls back to
        # /tmp which cause slowdowns if it's not a shared memory volume.
        volumeMounts:
          - mountPath: /dev/shm
            name: dshm
          - mountPath: /etc/ca/tls
            name: ca-tls
            readOnly: true
          - mountPath: /etc/ray/tls
            name: ray-tls
        resources:
          limits:
            cpu: "1"
            memory: "1G"
            # For production use-cases, we recommend specifying integer CPU requests and limits.
            # We also recommend setting requests equal to limits for both CPU and memory.
            # For this example, we use a 500m CPU request to accommodate resource-constrained local
            # Kubernetes testing environments such as Kind and minikube.
          requests:
            cpu: "500m"
            memory: "1G"
